[package]
name = "guild-mayhem"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "=0.5.0"
heron = { version = "0.12.1", features = ["3d"] }
itertools = "0.10.1"
# minecraftrs = { git = "https://github.com/mindstorm38/minecraftrs" }

[dependencies.mc_core]
git = "https://github.com/mindstorm38/minecraftrs"
package = "mc-core"

[dependencies.mc_vanilla]
git = "https://github.com/mindstorm38/minecraftrs"
package = "mc-vanilla"

[dependencies.bevy]
version = "0.5.0"
